--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
     <section class="ad-player" id="ad-player-section">
         <div class="container">
             <div class="section-title">
-                <h2>Seu Player de Anúncios</h2>
+                <h2>player de anúncios "Demonstração"</h2>
                 <p>Assista aos anúncios disponíveis para começar a acumular pontos imediatamente!</p>
             </div>
             <div class="player-container">
