--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdWealth - Ganhe Dinheiro Assistindo Anúncios</title>
+    <title>Adveris - Ganhe Dinheiro Assistindo Anúncios</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -934,7 +934,7 @@
             <nav>
                 <a href="#hero" class="logo">
                     <i class="fas fa-coins"></i>
-                    <span>AdWealth</span>
+                    <span>Adveris</span>
                 </a>
                 <ul class="nav-links">
                     <li><a href="#hero">Início</a></li>
@@ -950,7 +950,7 @@
 
     <section class="hero" id="hero">
         <div class="container">
-            <h1>Ganhe Dinheiro Assistindo Anúncios Simplesmente</h1>
+            <h1>Assista e ganhe Muito!</h1>
             <p>AdWealth conecta marcas a consumidores engajados, como você. Assista anúncios relevantes, acumule pontos e resgate-os em dinheiro via Pix, PayPal, ou em vales-presente.</p>
             <div class="hero-btns">
                 <a href="#" class="btn btn-primary" id="start-earning-btn">Comece Agora Grátis</a>
@@ -1112,7 +1112,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Sim! A AdWealth é otimizada para funcionar perfeitamente em smartphones, tablets e computadores, permitindo que você ganhe de onde estiver.</p>
+                        <p>Sim! A Advaris é otimizada para funcionar perfeitamente em smartphones, tablets e computadores, permitindo que você ganhe de onde estiver.</p>
                     </div>
                 </div>
             </div>
@@ -1125,7 +1125,7 @@
                 <div class="footer-column">
                     <a href="#hero" class="logo">
                         <i class="fas fa-coins"></i>
-                        <span>AdWealth</span>
+                        <span>Advaris</span>
                     </a>
                     <p>Sua plataforma para transformar tempo em dinheiro, conectando marcas a consumidores de forma inteligente e recompensadora.</p>
                     <div class="social-links">
