--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <i class="fas fa-play-circle"></i> Adveris
+                    <i class="fas fa-play-circle"></i> AdMoney
                 </div>
                 <ul class="nav-links">
                     <li><a href="#hero">Início</a></li>
@@ -978,7 +978,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <div class="logo">
-                        <i class="fas fa-play-circle"></i> Adveris
+                        <i class="fas fa-play-circle"></i> AdMoney
                     </div>
                     <p>Ganhe dinheiro de forma inteligente assistindo a anúncios curtos e engajantes.</p>
                     <div class="social-links">
@@ -1014,7 +1014,7 @@
                 </div>
             </div>
             <div class="copyright">
-                © 2024 Adveris. Todos os direitos reservados.
+                © 2025 AdMoney. Todos os direitos reservados.
             </div>
         </div>
     </footer>
