--- a/indexgn.html
+++ b/indexgn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdReels - Ganhe Assistindo</title>
+    <title>AdMoney - Ganhe Assistindo</title>
     <style>
         /* ... SEU CSS original, preservado ... */
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -66,7 +66,7 @@
     <div class="header">
         <div class="header-content">
             <div class="logo">
-                📱 AdWealth
+                📱 AdMoney
             </div>
             <div class="user-info">
                 <div class="balance" id="balance">R$ 0,00</div>
